文件上传设置

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -64,13 +64,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">资料上传</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>企业授权书模板</a></dd>
-                        <dd><a href="javascript:;" menuid="601" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>展会中英文邀请函</a></dd>
-                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>参展合约</a></dd>
-                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>参展商手册</a></dd>
-                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>搭建商手册</a></dd>
-                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>团体观众登记表</a></dd>
-                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>观众邀请券</a></dd>
+                        <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="/platform/resourceupload/input" width="100%" height="440px;" frameborder="0"></iframe>'>设置上传</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
