--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -55,10 +55,10 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">关于我们</a>
+                    <a href="javascript:;">关于</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="500" menuurl='<iframe src="/platform/about/list" width="100%" height="440px;" frameborder="0"></iframe>'>关于</a></dd>
-                        <dd><a href="javascript:;" menuid="501" menuurl='<iframe src="/platform/aboutus/list" width="100%" height="440px;" frameborder="0"></iframe>'>规范设置</a></dd>
+                        <dd><a href="javascript:;" menuid="500" menuurl='<iframe src="/platform/about/list" width="100%" height="440px;" frameborder="0"></iframe>'>首页关于</a></dd>
+                        <dd><a href="javascript:;" menuid="501" menuurl='<iframe src="/platform/aboutus/list" width="100%" height="440px;" frameborder="0"></iframe>'>关于我们</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -68,18 +68,9 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">关于展览会</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="700" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>展会介绍</a></dd>
-                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>展会日程</a></dd>
-                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>交通住宿</a></dd>
-                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>主办方信息</a></dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item">
                     <a href="javascript:;">帮助与反馈</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="800" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>意见反馈</a></dd>
+                        <dd><a href="javascript:;" menuid="700" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>意见反馈</a></dd>
                         <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>常见问题</a></dd>
                         <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>更多问题</a></dd>
                     </dl>
