后台反馈列表

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -70,9 +70,8 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">帮助与反馈</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="700" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>意见反馈</a></dd>
-                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>常见问题</a></dd>
-                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>更多问题</a></dd>
+                        <dd><a href="javascript:;" menuid="700" menuurl='<iframe src="/platform/feedback/list" width="100%" height="440px;" frameborder="0"></iframe>'>意见反馈</a></dd>
+                        <dd><a href="javascript:;" menuid="701" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>常见问题</a></dd>
                     </dl>
                 </li>
             </ul>
