用户协议接口

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -74,6 +74,15 @@
                         <dd><a href="javascript:;" menuid="701" menuurl='<iframe src="/platform/problem/list" width="100%" height="440px;" frameborder="0"></iframe>'>常见问题</a></dd>
                     </dl>
                 </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">第三方设置</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" menuid="800" menuurl='<iframe src="/platform/feedback/list" width="100%" height="440px;" frameborder="0"></iframe>'>直播管理</a></dd>
+                        <dd><a href="javascript:;" menuid="801" menuurl='<iframe src="/platform/problem/list" width="100%" height="440px;" frameborder="0"></iframe>'>蜂鸟地图管理</a></dd>
+                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/problem/list" width="100%" height="440px;" frameborder="0"></iframe>'>短信验证管理</a></dd>
+                        <dd><a href="javascript:;" menuid="803" menuurl='<iframe src="/platform/problem/list" width="100%" height="440px;" frameborder="0"></iframe>'>推送信息管理</a></dd>
+                    </dl>
+                </li>
             </ul>
         </div>
     </div>
