--- a/src/main/resources/templates/live/input.html
+++ b/src/main/resources/templates/live/input.html
@@ -5,11 +5,77 @@
     <div class="layui-container">
         <div class="layui-row" style="margin-top: 10px;">
             <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
-                <form class="layui-form" th:object="${crmRole}">
+                <form class="layui-form" th:object="${ehbLiveBroadcast}">
                     <div class="layui-form-item">
-                        <label class="layui-form-label">名称</label>
+                        <label class="layui-form-label">主标题</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{name}" required  lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{mainTitle}" required  lay-verify="required" placeholder="请输入主标题" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">副标题</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{subTitle}" required  lay-verify="required" placeholder="请输入副标题" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">直播号</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{roomNum}" required  lay-verify="required" placeholder="请输入直播号" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">流名称</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{flowName}" required  lay-verify="required" placeholder="请输入流名称" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">直播时长</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{liveDuration}" required  lay-verify="required" placeholder="请输入直播时长" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">直播开始时间</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{liveStartTime}" required  lay-verify="required" placeholder="请输入直播开始时间" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">直播结束时间</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{liveEndtime}" required  lay-verify="required" placeholder="请输入直播结束时间" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">私密口令</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{livePassword}" required  lay-verify="required" placeholder="请输入私密口令" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">推流地址</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{pushFlowUrl}" required  lay-verify="required" placeholder="请输入推流地址" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">拉流地址</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{pullFlowUrl}" required  lay-verify="required" placeholder="请输入拉流地址" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">排序</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{sort}" required  lay-verify="required" placeholder="请输入排序" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">主播公告</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{announcement}" required  lay-verify="required" placeholder="请输入主播公告" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <input th:field="*{id}" type="hidden"/>
