--- a/src/main/resources/templates/live/input.html
+++ b/src/main/resources/templates/live/input.html
@@ -39,13 +39,13 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">直播开始时间</label>
                         <div class="layui-input-inline">
-                            <input type="text" class="layui-input" id="test5" placeholder="yyyy-MM-dd HH:mm:ss">
+                            <input name="liveStartTime" type="text" class="layui-input" id="test5" placeholder="yyyy-MM-dd HH:mm:ss">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">直播结束时间</label>
                         <div class="layui-input-inline">
-                            <input type="text" class="layui-input" id="test6" placeholder="yyyy-MM-dd HH:mm:ss">
+                            <input name="liveEndtime" type="text" class="layui-input" id="test6" placeholder="yyyy-MM-dd HH:mm:ss">
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -105,6 +105,11 @@
             //日期时间选择器
             laydate.render({
                 elem: '#test5'
+                ,type: 'datetime'
+            });
+            //日期时间选择器
+            laydate.render({
+                elem: '#test6'
                 ,type: 'datetime'
             });
         });
