--- a/src/main/resources/templates/live/input.html
+++ b/src/main/resources/templates/live/input.html
@@ -19,6 +19,12 @@
                         </div>
                     </div>
                     <div class="layui-form-item">
+                        <label class="layui-form-label">类型名称</label>
+                        <div class="layui-input-block">
+                            <input type="text" th:field="*{type}" required  lay-verify="required" placeholder="请输入副标题" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
                         <label class="layui-form-label">直播号</label>
                         <div class="layui-input-block">
                             <input type="text" th:field="*{roomNum}" required  lay-verify="required" placeholder="请输入直播号" autocomplete="off" class="layui-input">
@@ -37,15 +43,15 @@
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">直播开始时间</label>
+                        <label class="layui-form-label">开始时间</label>
                         <div class="layui-input-inline">
-                            <input name="liveStartTime" type="text" class="layui-input" id="test5" placeholder="yyyy-MM-dd HH:mm:ss">
+                            <input th:field="*{liveStartTime}" type="text" class="layui-input" id="test5" placeholder="yyyy-MM-dd HH:mm:ss">
                         </div>
                     </div>
                     <div class="layui-form-item">
-                        <label class="layui-form-label">直播结束时间</label>
+                        <label class="layui-form-label">结束时间</label>
                         <div class="layui-input-inline">
-                            <input name="liveEndtime" type="text" class="layui-input" id="test6" placeholder="yyyy-MM-dd HH:mm:ss">
+                            <input th:field="*{liveEndtime}" type="text" class="layui-input" id="test6" placeholder="yyyy-MM-dd HH:mm:ss">
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -93,7 +99,7 @@
             $ = layui.jquery;
 
             form.on('submit(submitFrom)', function(data){
-                var resultData = core.ajax('/crmRole/saveOrUpdate',false,'POST',data.field);
+                var resultData = core.ajax('/platform/live/saveOrUpdate',false,'POST',data.field);
                 if(resultData!=false){
                     parent.layer.msg('操作成功',core.showtime);
                     var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
