--- a/src/main/resources/templates/banner/input_duotu.html
+++ b/src/main/resources/templates/banner/input_duotu.html
@@ -26,11 +26,13 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">图片地址</label>
                         <div class="layui-upload">
-                            <button type="button" class="layui-btn" id="test2">上传图片</button>
-                            <div class="layui-upload-list">
-                                <img class="layui-upload-img" id="demo1" th:src="*{imgurl}">
-                                <p id="demoText"></p>
-                            </div>
+                            <button type="button" class="layui-btn" id="test2">图片选择</button>
+                            <button type="button" class="layui-btn" id="testListAction">开始上传</button>
+                            <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
+                                预览图：
+                                <div class="layui-upload-list" id="demo2"></div>
+                            </blockquote>
+                            <div id="editimg"></div>
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -51,22 +53,6 @@
                             <input type="text" th:field="*{sort}" required  lay-verify="required" placeholder="请输入排序" autocomplete="off" class="layui-input">
                         </div>
                     </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">内联/外联</label>
-                        <div class="layui-input-block">
-                            <select th:field="*{nw}" required  lay-verify="required">
-                                <option value="1" th:selected="${ehbBanner.nw=='1'}">内联</option>
-                                <option value="2" th:selected="${ehbBanner.nw=='2'}">外联</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label class="layui-form-label">内联下跳转id</label>
-                        <div class="layui-input-block">
-                            <input type="text" th:field="*{nlid}" required  lay-verify="required" placeholder="请输入排序" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-
                     <input th:field="*{id}" type="hidden"/>
                     <input th:field="*{imgurl}" type="hidden" id="imgurl"/>
                     <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
@@ -81,6 +67,14 @@
             core = layui.core,
             upload = layui.upload,
             $ = layui.jquery;
+
+            var imgurl = $('#imgurl').val();
+            var tempArr = imgurl.split(",");
+            var imgsrc = "";
+            for(var i=0;i<tempArr.length;i++){
+                imgsrc += '<img class=\"layui-upload-img\" src=\"'+tempArr[i]+'\" width=\"100px;\" height=\"100px;\" style="padding-left: 10px;">';
+            }
+            $('#editimg').html(imgsrc);
 
             form.on('submit(submitFrom)', function(data){
                 console.log(JSON.stringify(data.field));
@@ -97,26 +91,43 @@
                 return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
             });
 
-            //普通图片上传
-            var uploadInst = upload.render({
+            //多图片上传
+            upload.render({
                 elem: '#test2'
-                , url: '/api/upLoadByHttp?remarks=' + 3 //改成您自己的上传接口
-                , before: function (obj) {
+                ,url: '/api/upLoadByHttp?remarks=3' //改成您自己的上传接口
+                ,multiple: true
+                ,auto: false //选择文件后不自动上传
+                ,bindAction: '#testListAction' //指向一个按钮触发上传
+                ,choose: function(obj){
+                    var files = obj.pushFile();
                     //预读本地文件示例，不支持ie8
-                    obj.preview(function (index, file, result) {
-                        $('#demo1').attr('src', result); //图片链接（base64）
+                    obj.preview(function(index, file, result){
+                        $('#demo2').append('<span style="padding-left: 10px;"><img width="60px;" src="'+ result +'" alt="'+ file.name +'" class="layui-upload-img">' +
+                            '<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del" id="del_'+index+'">删除</a></span>');
+
+                        $('#del_'+index).on('click', function(){
+                            $(this).parent().remove();//移除样式
+                            delete files[index]; //删除列表中对应的文件，一般在某个事件中使用
+                        });
                     });
                 }
-                , done: function (res) {
-                    //如果上传失败
-                    if (res.code != 200) {
-                        return layer.msg('上传失败');
+                ,before: function(obj){ //obj参数包含的信息，跟 choose回调完全一致，可参见上文。
+                    if($('#demo2').find("span").size() == 0){
+                        layer.msg('请选择文件！',core.showtime);
                     }
-                    if (res.code == 200) {
-                        $('#imgurl').val(res.data[0].url);
-                        return layer.msg('上传成功！');
-                    }
-                    //上传成功
+                }
+                ,done: function(res, index, upload){
+                    //上传完毕
+                    console.log(JSON.stringify(res));
+                    var imgurl = $('#imgurl').val();
+                    imgurl += res.data[0].url+",";
+                    $('#imgurl').val(imgurl);
+                }
+                ,allDone: function(obj){ //当文件全部被提交后，才触发
+                    console.log(obj.total); //得到总文件数
+                    console.log(obj.successful); //请求成功的文件数
+                    console.log(obj.aborted); //请求失败的文件数
+                    return layer.alert('上传成功！');
                 }
             });
         });
