广告位后台管理

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -52,6 +52,7 @@
                     <a href="javascript:;">banner管理</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" menuid="400" menuurl='<iframe src="/platform/banner/list" width="100%" height="440px;" frameborder="0"></iframe>'>首页banner管理</a></dd>
+                        <dd><a href="javascript:;" menuid="401" menuurl='<iframe src="/platform/advertising/list" width="100%" height="440px;" frameborder="0"></iframe>'>广告位管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
