--- a/src/main/resources/templates/exhibitioninfo/list2.html
+++ b/src/main/resources/templates/exhibitioninfo/list2.html
@@ -156,6 +156,7 @@
         <script type="text/html" id="titleToolbar">
             <div class="layui-btn-container">
                 <button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-circle" title="添加"></i>添加</button>
+                <button class="layui-btn layui-btn-sm" lay-event="refreshCloudWindows"><i class="layui-icon layui-icon-add-circle" title="刷新云端橱窗"></i>刷新云端橱窗</button>
             </div>
         </script>
 
