首页样式高度调整

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -28,67 +28,67 @@
                 <li class="layui-nav-item">
                     <a class="" href="javascript:;">系统管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="100" menuurl='<iframe src="/platform/crmUser/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户管理</a></dd>
+                        <dd><a href="javascript:;" menuid="100" menuurl='<iframe src="/platform/crmUser/userList" width="100%" height="1080px;" frameborder="0"></iframe>'>用户管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">参展信息</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="200" menuurl='<iframe src="/platform/czrInfo/list" width="100%" height="440px;" frameborder="0"></iframe>'>专业观众</a></dd>
-                        <dd><a href="javascript:;" menuid="201" menuurl='<iframe src="/platform/zsInfo/list" width="100%" height="440px;" frameborder="0"></iframe>'>参展商</a></dd>
-                        <dd><a href="javascript:;" menuid="202" menuurl='<iframe src="/platform/guest/list" width="100%" height="440px;" frameborder="0"></iframe>'>专业嘉宾</a></dd>
+                        <dd><a href="javascript:;" menuid="200" menuurl='<iframe src="/platform/czrInfo/list" width="100%" height="1080px;" frameborder="0"></iframe>'>专业观众</a></dd>
+                        <dd><a href="javascript:;" menuid="201" menuurl='<iframe src="/platform/zsInfo/list" width="100%" height="1080px;" frameborder="0"></iframe>'>参展商</a></dd>
+                        <dd><a href="javascript:;" menuid="202" menuurl='<iframe src="/platform/guest/list" width="100%" height="1080px;" frameborder="0"></iframe>'>专业嘉宾</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">推荐设置</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="300" menuurl='<iframe src="/platform/label/list" width="100%" height="440px;" frameborder="0"></iframe>'>标签管理</a></dd>
-                        <dd><a href="javascript:;" menuid="301" menuurl='<iframe src="/platform/hottitle/list" width="100%" height="440px;" frameborder="0"></iframe>'>热搜词管理</a></dd>
-                        <dd><a href="javascript:;" menuid="302" menuurl='<iframe src="/platform/hall/list" width="100%" height="440px;" frameborder="0"></iframe>'>虚拟展厅</a></dd>
-                        <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/platform/article/list" width="100%" height="440px;" frameborder="0"></iframe>'>行业资讯</a></dd>
+                        <dd><a href="javascript:;" menuid="300" menuurl='<iframe src="/platform/label/list" width="100%" height="1080px;" frameborder="0"></iframe>'>标签管理</a></dd>
+                        <dd><a href="javascript:;" menuid="301" menuurl='<iframe src="/platform/hottitle/list" width="100%" height="1080px;" frameborder="0"></iframe>'>热搜词管理</a></dd>
+                        <dd><a href="javascript:;" menuid="302" menuurl='<iframe src="/platform/hall/list" width="100%" height="1080px;" frameborder="0"></iframe>'>虚拟展厅</a></dd>
+                        <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/platform/article/list" width="100%" height="1080px;" frameborder="0"></iframe>'>行业资讯</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">banner管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="400" menuurl='<iframe src="/platform/banner/list" width="100%" height="440px;" frameborder="0"></iframe>'>首页banner管理</a></dd>
-                        <dd><a href="javascript:;" menuid="401" menuurl='<iframe src="/platform/advertising/list" width="100%" height="440px;" frameborder="0"></iframe>'>广告位管理</a></dd>
+                        <dd><a href="javascript:;" menuid="400" menuurl='<iframe src="/platform/banner/list" width="100%" height="1080px;" frameborder="0"></iframe>'>首页banner管理</a></dd>
+                        <dd><a href="javascript:;" menuid="401" menuurl='<iframe src="/platform/advertising/list" width="100%" height="1080px;" frameborder="0"></iframe>'>广告位管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">关于</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="500" menuurl='<iframe src="/platform/about/list" width="100%" height="440px;" frameborder="0"></iframe>'>首页关于</a></dd>
-                        <dd><a href="javascript:;" menuid="501" menuurl='<iframe src="/platform/aboutus/list" width="100%" height="440px;" frameborder="0"></iframe>'>关于我们</a></dd>
+                        <dd><a href="javascript:;" menuid="500" menuurl='<iframe src="/platform/about/list" width="100%" height="1080px;" frameborder="0"></iframe>'>首页关于</a></dd>
+                        <dd><a href="javascript:;" menuid="501" menuurl='<iframe src="/platform/aboutus/list" width="100%" height="1080px;" frameborder="0"></iframe>'>关于我们</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">资料上传</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="/platform/resourceupload/input" width="100%" height="440px;" frameborder="0"></iframe>'>设置上传</a></dd>
+                        <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="/platform/resourceupload/input" width="100%" height="1080px;" frameborder="0"></iframe>'>设置上传</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">帮助与反馈</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="700" menuurl='<iframe src="/platform/feedback/list" width="100%" height="440px;" frameborder="0"></iframe>'>意见反馈</a></dd>
-                        <dd><a href="javascript:;" menuid="701" menuurl='<iframe src="/platform/problem/list" width="100%" height="440px;" frameborder="0"></iframe>'>常见问题</a></dd>
+                        <dd><a href="javascript:;" menuid="700" menuurl='<iframe src="/platform/feedback/list" width="100%" height="1080px;" frameborder="0"></iframe>'>意见反馈</a></dd>
+                        <dd><a href="javascript:;" menuid="701" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>常见问题</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">第三方设置</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="800" menuurl='<iframe src="/platform/live/list" width="100%" height="440px;" frameborder="0"></iframe>'>直播管理</a></dd>
-                        <dd><a href="javascript:;" menuid="801" menuurl='<iframe src="/platform/problem/list" width="100%" height="440px;" frameborder="0"></iframe>'>蜂鸟地图管理</a></dd>
-                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/problem/list" width="100%" height="440px;" frameborder="0"></iframe>'>短信验证管理</a></dd>
-                        <dd><a href="javascript:;" menuid="803" menuurl='<iframe src="/platform/problem/list" width="100%" height="440px;" frameborder="0"></iframe>'>推送信息管理</a></dd>
+                        <dd><a href="javascript:;" menuid="800" menuurl='<iframe src="/platform/live/list" width="100%" height="1080px;" frameborder="0"></iframe>'>直播管理</a></dd>
+                        <dd><a href="javascript:;" menuid="801" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>蜂鸟地图管理</a></dd>
+                        <dd><a href="javascript:;" menuid="802" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>短信验证管理</a></dd>
+                        <dd><a href="javascript:;" menuid="803" menuurl='<iframe src="/platform/problem/list" width="100%" height="1080px;" frameborder="0"></iframe>'>推送信息管理</a></dd>
                     </dl>
                 </li>
             </ul>
         </div>
     </div>
 
-    <div class="layui-body" style="height: 665px;">
+    <div class="layui-body" style="height: 100%;">
         <!-- 内容主体区域 -->
         <div class="layui-tab" lay-filter="tabpage" lay-allowclose="true">
             <ul class="layui-tab-title">
@@ -98,7 +98,7 @@
             </ul>
             <div class="layui-tab-content">
                 <div class="layui-tab-item layui-show">
-                    <iframe src="/crmUser/userList" width="100%" height="540px;" frameborder="0"></iframe>
+                    <iframe src="/crmUser/userList" width="100%" height="1080px;" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
